ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -17,7 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- description -->
 		<div>
-			<p>Yacine bonjour!</p>
+			<h1> Ma description </h1>
+			<p>Yacine je suis la formation GIT.</p>
 		</div>
+		
+		<!-- reconpenses -->
+		<div>
+			<h1> Recompenses </h1>
+			<p> en construction..</p>
+		</div>
+		
 </body></html>
