#2 : ajout medaille bronwe

--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,7 @@
 		<!-- reconpenses -->
 		<div>
 			<h1> Recompenses </h1>
-			<p> en construction..</p>
+			<p> <img src="images\images\medal_bronze.png"> </p>
 		</div>
 		
 		<!-- Mon gist -->
