--- a/hello.html
+++ b/hello.html
@@ -27,6 +27,7 @@
 		<div>
 			<h1> Recompenses </h1>
 			<p> <img src="images\medal_bronze.png"> </p>
+			<p> <img src="images\medal_silver"> </p>
 		</div>
 		
 		<!-- Mon gist -->
