ajout extension medail argent

--- a/hello.html
+++ b/hello.html
@@ -27,7 +27,7 @@
 		<div>
 			<h1> Recompenses </h1>
 			<p> <img src="images\medal_bronze.png"> </p>
-			<p> <img src="images\medal_silver"> </p>
+			<p> <img src="images\medal_silver.png"> </p>
 		</div>
 		
 		<!-- Mon gist -->
