--- a/hello.html
+++ b/hello.html
@@ -35,7 +35,11 @@
 			<h1> Mon gist </h1>
 			<p> <script src="https://gist.github.com/yacben187/135f3feff338afb6acc92dd602c67fe0.js"></script> </p>
 		</div>
-		
+		<!-- Mon gist -->
+		<div>
+			<h1> Mes commandes git </h1>
+			<p> git pull </p>
+		</div>
 		
 		
 </body></html>
